# trmnl_rs

./: .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  esp-env.sh  export-esp.sh  flake.nix  justfile  pyproject.toml  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.direnv/: flake-profile  flake-profile-12-link  flake-profile-19-link  flake-profile-20-link  flake-profile-21-link  flake-profile-22-link  flake-profile-23-link  flake-profile-24-link  flake-profile-30-link  flake-profile-46-link  flake-profile-5-link  flake-profile-50-link  flake-profile-7-link
.esp-idf-sys/: config.toml
core/: Cargo.toml
core/src/: lib.rs
risc32-esp-elf-gdb/: flake.nix
src/: main.rs  wifi.rs
