[workspace]
members = [
    "core",
]

[workspace.dependencies]
anyhow = "1.0.97"
derive_more = { version = "2.0.1", features = ["display", "deref", "from", "as_ref", "into_iterator"] }
epd-waveshare = "0.6.0"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = { version = "0.36.1", features = ["esp32c3"] }
log = "0.4"
thiserror = "2.0.12"
toml-cfg = "0.2.0"
trmnl_core = { path = "core" }

[package]
name = "trmnl"
version = "0.1.0"
authors = ["Chris Overcash <covercash2@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "trmnl"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
epd-waveshare.workspace = true
esp-idf-svc.workspace = true
log.workspace = true
toml-cfg.workspace = true
trmnl_core.workspace = true


[build-dependencies]
embuild = "0.33"
toml-cfg.workspace = true

esp-idf-sys = { version = "0.36.1", features = ["esp32c3"] }
