[package]
name = "trmnl_rs"
version = "0.1.0"
authors = ["Chris Overcash <covercash2@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "trmnl_rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "1.0.98"
embedded-svc = { version = "0.28.1", features = ["nightly"] }
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
heapless = { version = "0.8.0", features = ["serde"] }
log = "0.4"

[build-dependencies]
embuild = "0.33"
